# no-std-http

./: Cargo.toml  README.md  typos.toml
.github/workflows/: ci.yml
src/: byte_str.rs  convert.rs  error.rs  header.rs  lib.rs  method.rs  request.rs  response.rs  status.rs  uri.rs  version.rs
src/uri/: authority.rs  builder.rs  path.rs  scheme.rs  tests.rs
