[package]
name = "no-std-http"
version = "0.1.0"
edition = "2021"
authors = ["Wenkang Xu <kangkang@apache.org>"]

license = "Apache-2.0"
documentation = "https://docs.rs/http"
repository = "https://github.com/WenyXu/no-std-http"
description = "A library of common HTTP types design for no std environment"

[dependencies]
bytes = { version = "1", default-features = false }
derive_builder = { version = "0.13", default-features = false, features = [
    "alloc",
] }
smallvec = { version = "1.3", default-features = false }
strum = { version = "0.26", default-features = false, features = ["derive"] }
